make tmux advertise color support so that prompt etc. are color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,4 @@ set-option -g history-limit 100000
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+set -g default-terminal "tmux-256color"
