--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,3 +8,4 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 set -g default-terminal "tmux-256color"
+set -g update-environment "SSH_AUTH_SOCK SSH_AGENT_PID"
