add tmux plugin manager and tmux logger

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,12 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 set -g default-terminal "tmux-256color"
 set -g update-environment "SSH_AUTH_SOCK SSH_AGENT_PID"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dptsec/tmux-logger'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of
+# tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
